--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>MIDI Playback</title>
+    <title>TS - React & Redux Learning</title>
   </head>
   <body>
     <noscript>
